Support more resources in isOfferable method (#70)

Goal is to avoid to send offers that are too small to frameworks.
Before this patch, we only checked cpu resource which could lead to send
offers with enough cpus but not enough memory (for instance).

Change-Id: Ieae84bcbcbc66cab360cb9fba363d914d913032b
JIRA: MESOS-5378